[gd_scene load_steps=2 format=2]

[ext_resource path="res://interactables/buildb/bb_rb_button.gd" type="Script" id=1]

[node name="rb_button" type="Button"]
margin_right = 240.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 80 )
toggle_mode = true
flat = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 240.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="client_pfp" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="br_details" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 240.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="client_name" type="Label" parent="VBoxContainer/HBoxContainer/br_details"]
unique_name_in_owner = true
margin_right = 186.0
margin_bottom = 14.0
text = "client name"

[node name="desc" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/br_details"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 186.0
margin_bottom = 50.0
size_flags_vertical = 3
text = "aaaaaaaaaaaaaaaaaajjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjaaaaaaaaaaaaaaaaaa"
scroll_active = false

[node name="send" type="Button" parent="VBoxContainer"]
margin_left = 55.0
margin_top = 54.0
margin_right = 184.0
margin_bottom = 74.0
size_flags_horizontal = 4
text = "send current build"

[connection signal="mouse_entered" from="." to="." method="_on_rb_button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_rb_button_mouse_exited"]
[connection signal="toggled" from="." to="." method="_on_rb_button_toggled"]
[connection signal="pressed" from="VBoxContainer/send" to="." method="_on_send_pressed"]
